[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://map/Map.gd" type="Script" id=2]
[ext_resource path="res://map/SpawnPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/Controls.tscn" type="PackedScene" id=4]

[node name="Map" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -983058, 1, 262146, -983057, 1, 327682, -983056, 1, 327682, -983055, 1, 327682, -983054, 1, 327682, -983053, 1, 327682, -983052, 1, 327682, -983051, 1, 327682, -983050, 1, 327682, -983049, 1, 327682, -983048, 1, 327682, -983047, 1, 327682, -983046, 1, 327682, -983045, 1, 327682, -983044, 1, 327682, -983043, 1, 327682, -983042, 1, 327682, -983041, 1, 327682, -1048576, 1, 327682, -1048575, 1, 327682, -1048574, 1, 327682, -1048573, 1, 327682, -1048572, 1, 327682, -1048571, 1, 327682, -1048570, 1, 327682, -1048569, 1, 327682, -1048568, 1, 327682, -1048567, 1, 327682, -1048566, 1, 327682, -1048565, 1, 327682, -1048564, 1, 327682, -1048563, 1, 327682, -1048562, 1, 327682, -1048561, 1, 327682, -1048560, 1, 327682, -1048559, 1, 196610, -917522, 1, 262148, -917521, 1, 327686, -917520, 1, 327686, -917519, 1, 327686, -917518, 1, 327686, -917517, 1, 327686, -917516, 1, 327686, -917515, 1, 327686, -917514, 1, 327686, -917513, 1, 327686, -917512, 1, 327686, -917511, 1, 327686, -917510, 1, 327686, -917509, 1, 327686, -917508, 1, 327686, -917507, 1, 327686, -917506, 1, 327686, -917505, 1, 327686, -983040, 1, 327686, -983039, 1, 327686, -983038, 1, 327686, -983037, 1, 327686, -983036, 1, 327686, -983035, 1, 327686, -983034, 1, 327686, -983033, 1, 327686, -983032, 1, 327686, -983031, 1, 327686, -983030, 1, 327686, -983029, 1, 327686, -983028, 1, 327686, -983027, 1, 327686, -983026, 1, 327686, -983025, 1, 327686, -983024, 1, 327686, -983023, 1, 196612, -851986, 1, 262148, -851985, 1, 327686, -851984, 1, 262145, -851983, 1, 65540, -851982, 1, 65540, -851981, 1, 65540, -851980, 1, 65540, -851979, 1, 65540, -851978, 1, 65540, -851977, 1, 65540, -851976, 1, 65540, -851975, 1, 65540, -851974, 1, 65540, -851973, 1, 65540, -851972, 1, 65540, -851971, 1, 65540, -851970, 1, 65540, -851969, 1, 65540, -917504, 1, 65540, -917503, 1, 65540, -917502, 1, 65540, -917501, 1, 65540, -917500, 1, 65540, -917499, 1, 65540, -917498, 1, 65540, -917497, 1, 65540, -917496, 1, 65540, -917495, 1, 65540, -917494, 1, 65540, -917493, 1, 65540, -917492, 1, 65540, -917491, 1, 65540, -917490, 1, 65540, -917489, 1, 327681, -917488, 1, 327686, -917487, 1, 196612, -786450, 1, 262148, -786449, 1, 327686, -786448, 1, 196612, -786447, 0, 4, -786446, 0, 2, -786445, 0, 2, -786444, 0, 2, -786443, 0, 2, -786442, 0, 2, -786441, 0, 2, -786440, 0, 2, -786439, 0, 2, -786438, 0, 2, -786437, 0, 2, -786436, 0, 2, -786435, 0, 2, -786434, 0, 2, -786433, 0, 2, -851968, 0, 2, -851967, 0, 2, -851966, 0, 2, -851965, 0, 2, -851964, 0, 2, -851963, 0, 2, -851962, 0, 2, -851961, 0, 2, -851960, 0, 2, -851959, 0, 2, -851958, 0, 2, -851957, 0, 2, -851956, 0, 2, -851955, 0, 2, -851954, 0, 65537, -851953, 1, 262148, -851952, 1, 327686, -851951, 1, 196612, -720914, 1, 262148, -720913, 1, 327686, -720912, 1, 196612, -720911, 0, 3, -720910, 0, 1, -720909, 0, 1, -720908, 0, 1, -720907, 0, 1, -720906, 0, 1, -720905, 0, 1, -720904, 0, 1, -720903, 0, 1, -720902, 0, 1, -720901, 0, 1, -720900, 0, 1, -720899, 0, 1, -720898, 0, 1, -720897, 0, 1, -786432, 0, 1, -786431, 0, 1, -786430, 0, 1, -786429, 0, 1, -786428, 0, 1, -786427, 0, 1, -786426, 0, 1, -786425, 0, 1, -786424, 0, 1, -786423, 0, 1, -786422, 0, 1, -786421, 0, 1, -786420, 0, 1, -786419, 0, 1, -786418, 0, 65536, -786417, 1, 262148, -786416, 1, 327686, -786415, 1, 196612, -655378, 1, 262148, -655377, 1, 327686, -655376, 1, 196612, -655375, 0, 3, -655374, 0, 1, -655373, 0, 1, -655372, 0, 1, -655371, 0, 1, -655370, 0, 1, -655369, 0, 1, -655368, 0, 1, -655367, 0, 1, -655366, 0, 1, -655365, 0, 1, -655364, 0, 1, -655363, 0, 1, -655362, 0, 1, -655361, 0, 1, -720896, 0, 1, -720895, 0, 1, -720894, 0, 1, -720893, 0, 1, -720892, 0, 1, -720891, 0, 1, -720890, 0, 1, -720889, 0, 1, -720888, 0, 1, -720887, 0, 1, -720886, 0, 1, -720885, 0, 1, -720884, 0, 1, -720883, 0, 1, -720882, 0, 65536, -720881, 1, 262148, -720880, 1, 327686, -720879, 1, 196612, -589842, 1, 262148, -589841, 1, 327686, -589840, 1, 196612, -589839, 0, 3, -589838, 0, 1, -589837, 0, 1, -589836, 0, 1, -589835, 0, 1, -589834, 0, 1, -589833, 0, 1, -589832, 0, 1, -589831, 0, 1, -589830, 0, 1, -589829, 0, 1, -589828, 0, 1, -589827, 0, 1, -589826, 0, 1, -589825, 0, 1, -655360, 0, 1, -655359, 0, 1, -655358, 0, 1, -655357, 0, 1, -655356, 0, 1, -655355, 0, 1, -655354, 0, 1, -655353, 0, 1, -655352, 0, 1, -655351, 0, 1, -655350, 0, 1, -655349, 0, 1, -655348, 0, 1, -655347, 0, 1, -655346, 0, 65536, -655345, 1, 262148, -655344, 1, 327686, -655343, 1, 196612, -524306, 1, 262148, -524305, 1, 327686, -524304, 1, 196612, -524303, 0, 3, -524302, 0, 1, -524301, 0, 1, -524300, 0, 1, -524299, 0, 1, -524298, 0, 1, -524297, 0, 1, -524296, 0, 1, -524295, 0, 1, -524294, 0, 1, -524293, 0, 1, -524292, 0, 1, -524291, 0, 1, -524290, 0, 1, -524289, 0, 1, -589824, 0, 1, -589823, 0, 1, -589822, 0, 1, -589821, 0, 1, -589820, 0, 1, -589819, 0, 1, -589818, 0, 1, -589817, 0, 1, -589816, 0, 1, -589815, 0, 1, -589814, 0, 1, -589813, 0, 1, -589812, 0, 1, -589811, 0, 1, -589810, 0, 65536, -589809, 1, 262148, -589808, 1, 327686, -589807, 1, 196612, -458770, 1, 262148, -458769, 1, 327686, -458768, 1, 196612, -458767, 0, 3, -458766, 0, 1, -458765, 0, 1, -458764, 0, 1, -458763, 0, 1, -458762, 0, 1, -458761, 0, 1, -458760, 0, 1, -458759, 0, 1, -458758, 0, 1, -458757, 0, 1, -458756, 0, 1, -458755, 0, 1, -458754, 0, 1, -458753, 0, 1, -524288, 0, 1, -524287, 0, 1, -524286, 0, 1, -524285, 0, 1, -524284, 0, 1, -524283, 0, 1, -524282, 0, 1, -524281, 0, 1, -524280, 0, 1, -524279, 0, 1, -524278, 0, 1, -524277, 0, 1, -524276, 0, 1, -524275, 0, 1, -524274, 0, 65536, -524273, 1, 262148, -524272, 1, 327686, -524271, 1, 196612, -393234, 1, 262148, -393233, 1, 327686, -393232, 1, 196612, -393231, 0, 3, -393230, 0, 1, -393229, 0, 1, -393228, 0, 1, -393227, 0, 1, -393226, 0, 1, -393225, 0, 1, -393224, 0, 1, -393223, 0, 1, -393222, 0, 1, -393221, 0, 1, -393220, 0, 1, -393219, 0, 1, -393218, 0, 1, -393217, 0, 1, -458752, 0, 1, -458751, 0, 1, -458750, 0, 1, -458749, 0, 1, -458748, 0, 1, -458747, 0, 1, -458746, 0, 1, -458745, 0, 1, -458744, 0, 1, -458743, 0, 1, -458742, 0, 1, -458741, 0, 1, -458740, 0, 1, -458739, 0, 1, -458738, 0, 65536, -458737, 1, 262148, -458736, 1, 327686, -458735, 1, 196612, -327698, 1, 262148, -327697, 1, 327686, -327696, 1, 196612, -327695, 0, 3, -327694, 0, 1, -327693, 0, 1, -327692, 0, 1, -327691, 0, 1, -327690, 0, 1, -327689, 0, 1, -327688, 0, 1, -327687, 0, 1, -327686, 0, 1, -327685, 0, 1, -327684, 0, 1, -327683, 0, 1, -327682, 0, 1, -327681, 0, 1, -393216, 0, 1, -393215, 0, 1, -393214, 0, 1, -393213, 0, 1, -393212, 0, 1, -393211, 0, 1, -393210, 0, 1, -393209, 0, 1, -393208, 0, 1, -393207, 0, 1, -393206, 0, 1, -393205, 0, 1, -393204, 0, 1, -393203, 0, 1, -393202, 0, 65536, -393201, 1, 262148, -393200, 1, 327686, -393199, 1, 196612, -262162, 1, 262148, -262161, 1, 327686, -262160, 1, 196612, -262159, 0, 3, -262158, 0, 1, -262157, 0, 1, -262156, 0, 1, -262155, 0, 1, -262154, 0, 1, -262153, 0, 1, -262152, 0, 1, -262151, 0, 1, -262150, 0, 1, -262149, 0, 1, -262148, 0, 1, -262147, 0, 1, -262146, 0, 1, -262145, 0, 1, -327680, 0, 1, -327679, 0, 1, -327678, 0, 1, -327677, 0, 1, -327676, 0, 1, -327675, 0, 1, -327674, 0, 1, -327673, 0, 1, -327672, 0, 1, -327671, 0, 1, -327670, 0, 1, -327669, 0, 1, -327668, 0, 1, -327667, 0, 1, -327666, 0, 65536, -327665, 1, 262148, -327664, 1, 327686, -327663, 1, 196612, -196626, 1, 262148, -196625, 1, 327686, -196624, 1, 196612, -196623, 0, 3, -196622, 0, 1, -196621, 0, 1, -196620, 0, 1, -196619, 0, 1, -196618, 0, 1, -196617, 0, 1, -196616, 0, 1, -196615, 0, 1, -196614, 0, 1, -196613, 0, 1, -196612, 0, 1, -196611, 0, 1, -196610, 0, 1, -196609, 0, 1, -262144, 0, 1, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 1, -262139, 0, 1, -262138, 0, 1, -262137, 0, 1, -262136, 0, 1, -262135, 0, 1, -262134, 0, 1, -262133, 0, 1, -262132, 0, 1, -262131, 0, 1, -262130, 0, 65536, -262129, 1, 262148, -262128, 1, 327686, -262127, 1, 196612, -131090, 1, 262148, -131089, 1, 327686, -131088, 1, 196612, -131087, 0, 3, -131086, 0, 1, -131085, 0, 1, -131084, 0, 1, -131083, 0, 1, -131082, 0, 1, -131081, 0, 1, -131080, 0, 1, -131079, 0, 1, -131078, 0, 1, -131077, 0, 1, -131076, 0, 1, -131075, 0, 1, -131074, 0, 1, -131073, 0, 1, -196608, 0, 1, -196607, 0, 1, -196606, 0, 1, -196605, 0, 1, -196604, 0, 1, -196603, 0, 1, -196602, 0, 1, -196601, 0, 1, -196600, 0, 1, -196599, 0, 1, -196598, 0, 1, -196597, 0, 1, -196596, 0, 1, -196595, 0, 1, -196594, 0, 65536, -196593, 1, 262148, -196592, 1, 327686, -196591, 1, 196612, -65554, 1, 262148, -65553, 1, 327686, -65552, 1, 196612, -65551, 0, 3, -65550, 0, 1, -65549, 0, 1, -65548, 0, 1, -65547, 0, 1, -65546, 0, 1, -65545, 0, 1, -65544, 0, 1, -65543, 0, 1, -65542, 0, 1, -65541, 0, 1, -65540, 0, 1, -65539, 0, 1, -65538, 0, 1, -65537, 0, 1, -131072, 0, 1, -131071, 0, 1, -131070, 0, 1, -131069, 0, 1, -131068, 0, 1, -131067, 0, 1, -131066, 0, 1, -131065, 0, 1, -131064, 0, 1, -131063, 0, 1, -131062, 0, 1, -131061, 0, 1, -131060, 0, 1, -131059, 0, 1, -131058, 0, 65536, -131057, 1, 262148, -131056, 1, 327686, -131055, 1, 196612, -18, 1, 262148, -17, 1, 327686, -16, 1, 196612, -15, 0, 3, -14, 0, 1, -13, 0, 1, -12, 0, 1, -11, 0, 1, -10, 0, 1, -9, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 1, -65525, 0, 1, -65524, 0, 1, -65523, 0, 1, -65522, 0, 65536, -65521, 1, 262148, -65520, 1, 327686, -65519, 1, 196612, 65518, 1, 262148, 65519, 1, 327686, 65520, 1, 196612, 65521, 0, 3, 65522, 0, 1, 65523, 0, 1, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 65536, 15, 1, 262148, 16, 1, 327686, 17, 1, 196612, 131054, 1, 262148, 131055, 1, 327686, 131056, 1, 196612, 131057, 0, 3, 131058, 0, 1, 131059, 0, 1, 131060, 0, 1, 131061, 0, 1, 131062, 0, 1, 131063, 0, 1, 131064, 0, 1, 131065, 0, 1, 131066, 0, 1, 131067, 0, 1, 131068, 0, 1, 131069, 0, 1, 131070, 0, 1, 131071, 0, 1, 65536, 0, 1, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 65536, 65551, 1, 262148, 65552, 1, 327686, 65553, 1, 196612, 196590, 1, 262148, 196591, 1, 327686, 196592, 1, 196612, 196593, 0, 3, 196594, 0, 1, 196595, 0, 1, 196596, 0, 1, 196597, 0, 1, 196598, 0, 1, 196599, 0, 1, 196600, 0, 1, 196601, 0, 1, 196602, 0, 1, 196603, 0, 1, 196604, 0, 1, 196605, 0, 1, 196606, 0, 1, 196607, 0, 1, 131072, 0, 1, 131073, 0, 1, 131074, 0, 1, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 131086, 0, 65536, 131087, 1, 262148, 131088, 1, 327686, 131089, 1, 196612, 262126, 1, 262148, 262127, 1, 327686, 262128, 1, 196612, 262129, 0, 3, 262130, 0, 1, 262131, 0, 1, 262132, 0, 1, 262133, 0, 1, 262134, 0, 1, 262135, 0, 1, 262136, 0, 1, 262137, 0, 1, 262138, 0, 1, 262139, 0, 1, 262140, 0, 1, 262141, 0, 1, 262142, 0, 1, 262143, 0, 1, 196608, 0, 1, 196609, 0, 1, 196610, 0, 1, 196611, 0, 1, 196612, 0, 1, 196613, 0, 1, 196614, 0, 1, 196615, 0, 1, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 1, 196622, 0, 65536, 196623, 1, 262148, 196624, 1, 327686, 196625, 1, 196612, 327662, 1, 262148, 327663, 1, 327686, 327664, 1, 196612, 327665, 0, 3, 327666, 0, 1, 327667, 0, 1, 327668, 0, 1, 327669, 0, 1, 327670, 0, 1, 327671, 0, 1, 327672, 0, 1, 327673, 0, 1, 327674, 0, 1, 327675, 0, 1, 327676, 0, 1, 327677, 0, 1, 327678, 0, 1, 327679, 0, 1, 262144, 0, 1, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 1, 262149, 0, 1, 262150, 0, 1, 262151, 0, 1, 262152, 0, 1, 262153, 0, 1, 262154, 0, 1, 262155, 0, 1, 262156, 0, 1, 262157, 0, 1, 262158, 0, 65536, 262159, 1, 262148, 262160, 1, 327686, 262161, 1, 196612, 393198, 1, 262148, 393199, 1, 327686, 393200, 1, 196612, 393201, 0, 3, 393202, 0, 1, 393203, 0, 1, 393204, 0, 1, 393205, 0, 1, 393206, 0, 1, 393207, 0, 1, 393208, 0, 1, 393209, 0, 1, 393210, 0, 1, 393211, 0, 1, 393212, 0, 1, 393213, 0, 1, 393214, 0, 1, 393215, 0, 1, 327680, 0, 1, 327681, 0, 1, 327682, 0, 1, 327683, 0, 1, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 1, 327689, 0, 1, 327690, 0, 1, 327691, 0, 1, 327692, 0, 1, 327693, 0, 1, 327694, 0, 65536, 327695, 1, 262148, 327696, 1, 327686, 327697, 1, 196612, 458734, 1, 262148, 458735, 1, 327686, 458736, 1, 196612, 458737, 0, 3, 458738, 0, 1, 458739, 0, 1, 458740, 0, 1, 458741, 0, 1, 458742, 0, 1, 458743, 0, 1, 458744, 0, 1, 458745, 0, 1, 458746, 0, 1, 458747, 0, 1, 458748, 0, 1, 458749, 0, 1, 458750, 0, 1, 458751, 0, 1, 393216, 0, 1, 393217, 0, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 1, 393221, 0, 1, 393222, 0, 1, 393223, 0, 1, 393224, 0, 1, 393225, 0, 1, 393226, 0, 1, 393227, 0, 1, 393228, 0, 1, 393229, 0, 1, 393230, 0, 65536, 393231, 1, 262148, 393232, 1, 327686, 393233, 1, 196612, 524270, 1, 262148, 524271, 1, 327686, 524272, 1, 196612, 524273, 0, 3, 524274, 0, 1, 524275, 0, 1, 524276, 0, 1, 524277, 0, 1, 524278, 0, 1, 524279, 0, 1, 524280, 0, 1, 524281, 0, 1, 524282, 0, 1, 524283, 0, 1, 524284, 0, 1, 524285, 0, 1, 524286, 0, 1, 524287, 0, 1, 458752, 0, 1, 458753, 0, 1, 458754, 0, 1, 458755, 0, 1, 458756, 0, 1, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 458760, 0, 1, 458761, 0, 1, 458762, 0, 1, 458763, 0, 1, 458764, 0, 1, 458765, 0, 1, 458766, 0, 65536, 458767, 1, 262148, 458768, 1, 327686, 458769, 1, 196612, 589806, 1, 262148, 589807, 1, 327686, 589808, 1, 196612, 589809, 0, 3, 589810, 0, 1, 589811, 0, 1, 589812, 0, 1, 589813, 0, 1, 589814, 0, 1, 589815, 0, 1, 589816, 0, 1, 589817, 0, 1, 589818, 0, 1, 589819, 0, 1, 589820, 0, 1, 589821, 0, 1, 589822, 0, 1, 589823, 0, 1, 524288, 0, 1, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 1, 524298, 0, 1, 524299, 0, 1, 524300, 0, 1, 524301, 0, 1, 524302, 0, 65536, 524303, 1, 262148, 524304, 1, 327686, 524305, 1, 196612, 655342, 1, 262148, 655343, 1, 327686, 655344, 1, 196612, 655345, 0, 3, 655346, 0, 1, 655347, 0, 1, 655348, 0, 1, 655349, 0, 1, 655350, 0, 1, 655351, 0, 1, 655352, 0, 1, 655353, 0, 1, 655354, 0, 1, 655355, 0, 1, 655356, 0, 1, 655357, 0, 1, 655358, 0, 1, 655359, 0, 1, 589824, 0, 1, 589825, 0, 1, 589826, 0, 1, 589827, 0, 1, 589828, 0, 1, 589829, 0, 1, 589830, 0, 1, 589831, 0, 1, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 1, 589836, 0, 1, 589837, 0, 1, 589838, 0, 65536, 589839, 1, 262148, 589840, 1, 327686, 589841, 1, 196612, 720878, 1, 262148, 720879, 1, 327686, 720880, 1, 196612, 720881, 0, 3, 720882, 0, 1, 720883, 0, 1, 720884, 0, 1, 720885, 0, 1, 720886, 0, 1, 720887, 0, 1, 720888, 0, 1, 720889, 0, 1, 720890, 0, 1, 720891, 0, 1, 720892, 0, 1, 720893, 0, 1, 720894, 0, 1, 720895, 0, 1, 655360, 0, 1, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 1, 655373, 0, 1, 655374, 0, 65536, 655375, 1, 262148, 655376, 1, 327686, 655377, 1, 196612, 786414, 1, 262148, 786415, 1, 327686, 786416, 1, 196612, 786417, 0, 3, 786418, 0, 1, 786419, 0, 1, 786420, 0, 1, 786421, 0, 1, 786422, 0, 1, 786423, 0, 1, 786424, 0, 1, 786425, 0, 1, 786426, 0, 1, 786427, 0, 1, 786428, 0, 1, 786429, 0, 1, 786430, 0, 1, 786431, 0, 1, 720896, 0, 1, 720897, 0, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 1, 720903, 0, 1, 720904, 0, 1, 720905, 0, 1, 720906, 0, 1, 720907, 0, 1, 720908, 0, 1, 720909, 0, 1, 720910, 0, 65536, 720911, 1, 262148, 720912, 1, 327686, 720913, 1, 196612, 851950, 1, 262148, 851951, 1, 327686, 851952, 1, 196612, 851953, 0, 3, 851954, 0, 1, 851955, 0, 1, 851956, 0, 1, 851957, 0, 1, 851958, 0, 1, 851959, 0, 1, 851960, 0, 1, 851961, 0, 1, 851962, 0, 1, 851963, 0, 1, 851964, 0, 1, 851965, 0, 1, 851966, 0, 1, 851967, 0, 1, 786432, 0, 1, 786433, 0, 1, 786434, 0, 1, 786435, 0, 1, 786436, 0, 1, 786437, 0, 1, 786438, 0, 1, 786439, 0, 1, 786440, 0, 1, 786441, 0, 1, 786442, 0, 1, 786443, 0, 1, 786444, 0, 1, 786445, 0, 1, 786446, 0, 65536, 786447, 1, 262148, 786448, 1, 327686, 786449, 1, 196612, 917486, 1, 262148, 917487, 1, 327686, 917488, 1, 196612, 917489, 0, 131073, 917490, 0, 65540, 917491, 0, 65540, 917492, 0, 65540, 917493, 0, 65540, 917494, 0, 65540, 917495, 0, 65540, 917496, 0, 65540, 917497, 0, 65540, 917498, 0, 65540, 917499, 0, 65540, 917500, 0, 65540, 917501, 0, 65540, 917502, 0, 65540, 917503, 0, 65540, 851968, 0, 65540, 851969, 0, 65540, 851970, 0, 65540, 851971, 0, 65540, 851972, 0, 65540, 851973, 0, 65540, 851974, 0, 65540, 851975, 0, 65540, 851976, 0, 65540, 851977, 0, 65540, 851978, 0, 65540, 851979, 0, 65540, 851980, 0, 65540, 851981, 0, 65540, 851982, 0, 131075, 851983, 1, 262148, 851984, 1, 327686, 851985, 1, 196612, 983022, 1, 262148, 983023, 1, 327686, 983024, 1, 327684, 983025, 1, 327682, 983026, 1, 327682, 983027, 1, 327682, 983028, 1, 327682, 983029, 1, 327682, 983030, 1, 327682, 983031, 1, 327682, 983032, 1, 327682, 983033, 1, 327682, 983034, 1, 327682, 983035, 1, 327682, 983036, 1, 327682, 983037, 1, 327682, 983038, 1, 327682, 983039, 1, 327682, 917504, 1, 327682, 917505, 1, 327682, 917506, 1, 327682, 917507, 1, 327682, 917508, 1, 327682, 917509, 1, 327682, 917510, 1, 327682, 917511, 1, 327682, 917512, 1, 327682, 917513, 1, 327682, 917514, 1, 327682, 917515, 1, 327682, 917516, 1, 327682, 917517, 1, 327682, 917518, 1, 327682, 917519, 1, 327685, 917520, 1, 327686, 917521, 1, 196612, 1048558, 1, 262148, 1048559, 1, 327686, 1048560, 1, 327686, 1048561, 1, 327686, 1048562, 1, 327686, 1048563, 1, 327686, 1048564, 1, 327686, 1048565, 1, 327686, 1048566, 1, 327686, 1048567, 1, 327686, 1048568, 1, 327686, 1048569, 1, 327686, 1048570, 1, 327686, 1048571, 1, 327686, 1048572, 1, 327686, 1048573, 1, 327686, 1048574, 1, 327686, 1048575, 1, 327686, 983040, 1, 327686, 983041, 1, 327686, 983042, 1, 327686, 983043, 1, 327686, 983044, 1, 327686, 983045, 1, 327686, 983046, 1, 327686, 983047, 1, 327686, 983048, 1, 327686, 983049, 1, 327686, 983050, 1, 327686, 983051, 1, 327686, 983052, 1, 327686, 983053, 1, 327686, 983054, 1, 327686, 983055, 1, 327686, 983056, 1, 327686, 983057, 1, 196612, 1114094, 1, 7, 1114095, 1, 65540, 1114096, 1, 65540, 1114097, 1, 65540, 1114098, 1, 65540, 1114099, 1, 65540, 1114100, 1, 65540, 1114101, 1, 65540, 1114102, 1, 65540, 1114103, 1, 65540, 1114104, 1, 65540, 1114105, 1, 65540, 1114106, 1, 65540, 1114107, 1, 65540, 1114108, 1, 65540, 1114109, 1, 65540, 1114110, 1, 65540, 1114111, 1, 65540, 1048576, 1, 65540, 1048577, 1, 65540, 1048578, 1, 65540, 1048579, 1, 65540, 1048580, 1, 65540, 1048581, 1, 65540, 1048582, 1, 65540, 1048583, 1, 65540, 1048584, 1, 65540, 1048585, 1, 65540, 1048586, 1, 65540, 1048587, 1, 65540, 1048588, 1, 65540, 1048589, 1, 65540, 1048590, 1, 65540, 1048591, 1, 65540, 1048592, 1, 65540, 1048593, 1, 4 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPoint" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( -435.578, -377.595 )

[node name="SpawnPoint5" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( 0.962463, -377.595 )

[node name="SpawnPoint6" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( 0.962463, 413.523 )

[node name="SpawnPoint2" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( 438.406, -377.595 )

[node name="SpawnPoint7" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( 438.406, 0.146027 )

[node name="SpawnPoint3" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( -435.578, 412.951 )

[node name="SpawnPoint8" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( -435.578, -3.99008 )

[node name="SpawnPoint4" parent="SpawnPositions" instance=ExtResource( 3 )]
position = Vector2( 441.235, 412.951 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Control" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
